Add Symptom Button Added and Working Successgully(95 Acc)

--- a/static/print_data.css
+++ b/static/print_data.css
@@ -13,6 +13,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     text-align: center; /* Center align the text */
+    border: 2px solid green;
 }
 
 .hidden-table {
