--- a/static/patient_info.css
+++ b/static/patient_info.css
@@ -4,6 +4,12 @@ body {
     text-align: center;
     padding: 20px;
 }
+h1 {
+    font-size: 35px;
+    margin-bottom: 20px;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px #07f093;
+}
 
 .container {
     background-color: rgba(255, 255, 255, 0.9);
@@ -13,6 +19,7 @@ body {
     text-align: center;
     max-width: 600px;
     margin: 20px auto;
+    border: 2px solid green;
 }
 
 .hidden-table {
